--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   db:
     hostname: db.magento2.docker
     image: 'mariadb:10.3'
+    container_name: magento-mysql
     shm_size: 2gb
     environment:
       - MYSQL_ROOT_PASSWORD=magento2
