--- a/.docker/config.php.dist
+++ b/.docker/config.php.dist
@@ -24,6 +24,9 @@ return [
         ],
         'table_prefix' => ''
     ],
+    'crypt' => [
+        'key' => '00000000000000000000000000000000'
+    ],
     'resource' => [
         'default_setup' => [
             'connection' => 'default'
@@ -77,8 +80,8 @@ return [
     ],
     'cache_types' => [
         'config' => 1,
-        'layout' => 1,
-        'block_html' => 1,
+        'layout' => 0,
+        'block_html' => 0,
         'collections' => 1,
         'reflection' => 1,
         'db_ddl' => 1,
@@ -87,7 +90,7 @@ return [
         'customer_notification' => 1,
         'config_integration' => 1,
         'config_integration_api' => 1,
-        'full_page' => 1,
+        'full_page' => 0,
         'target_rule' => 1,
         'config_webservice' => 1,
         'translate' => 1,
