--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 # ./vendor/bin/ece-docker 'build:compose' --mode=developer --sync-engine=native --expose-db-port=3306 --with-cron --set-docker-host --with-xdebug
-version: '2.1'
+version: "2.1"
 services:
   db:
     hostname: db.magento2.docker
-    image: 'mariadb:10.3'
+    image: "mariadb:10.3"
     container_name: magento-mysql
     shm_size: 2gb
     environment:
@@ -12,12 +12,12 @@ services:
       - MYSQL_USER=magento2
       - MYSQL_PASSWORD=magento2
     ports:
-      - '3306:3306'
+      - "3306:3306"
     volumes:
-      - './magento2:/app:delegated'
-      - 'magento2-magento-db:/var/lib/mysql'
+      - "./magento2:/app:delegated"
+      - "magento2-magento-db:/var/lib/mysql"
     healthcheck:
-      test: 'mysqladmin ping -h localhost -pmagento2'
+      test: "mysqladmin ping -h localhost -pmagento2"
       interval: 30s
       timeout: 30s
       retries: 3
@@ -25,11 +25,33 @@ services:
       magento:
         aliases:
           - db.magento2.docker
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: phpmyadmin
+    links:
+      - db
+    environment:
+      PMA_HOST: magento-mysql
+      PMA_USER: "root"
+      PMA_PASSWORD: "magento2"
+      PMA_PORT: 3306
+      PMA_ARBITRARY: 1
+    restart: always
+    ports:
+      - 8081:80
+    volumes:
+      - "./.docker/uploads.ini:/usr/local/etc/php/conf.d/uploads.ini"
+    networks:
+      magento:
+        aliases:
+          - db.magento2.docker
+
   redis:
     hostname: redis.magento2.docker
-    image: 'redis:5.0'
+    image: "redis:5.0"
     volumes:
-      - './magento2:/app:delegated'
+      - "./magento2:/app:delegated"
     ports:
       - 6379
     sysctls:
@@ -40,7 +62,7 @@ services:
         soft: 20000
         hard: 40000
     healthcheck:
-      test: 'redis-cli ping || exit 1'
+      test: "redis-cli ping || exit 1"
       interval: 30s
       timeout: 30s
       retries: 3
@@ -48,9 +70,10 @@ services:
       magento:
         aliases:
           - redis.magento2.docker
+
   elasticsearch:
     hostname: elasticsearch.magento2.docker
-    image: 'magento/magento-cloud-docker-elasticsearch:7.7-1.3.2'
+    image: "magento/magento-cloud-docker-elasticsearch:7.7-1.3.2"
     ulimits:
       memlock:
         soft: -1
@@ -62,12 +85,13 @@ services:
       magento:
         aliases:
           - elasticsearch.magento2.docker
+
   fpm:
     hostname: fpm.magento2.docker
-    image: 'magento/magento-cloud-docker-php:8.1-fpm-1.3.2'
+    image: "magento/magento-cloud-docker-php:8.1-fpm-1.3.2"
     extends: generic
     volumes:
-      - './magento2:/app:delegated'
+      - "./magento2:/app:delegated"
     networks:
       magento:
         aliases:
@@ -75,12 +99,13 @@ services:
     depends_on:
       db:
         condition: service_healthy
+
   web:
     hostname: web.magento2.docker
-    image: 'magento/magento-cloud-docker-nginx:1.19-1.3.2'
+    image: "magento/magento-cloud-docker-nginx:1.19-1.3.2"
     extends: generic
     volumes:
-      - './magento2:/app:delegated'
+      - "./magento2:/app:delegated"
     environment:
       - WITH_XDEBUG=1
       - NGINX_WORKER_PROCESSES=1
@@ -92,9 +117,10 @@ services:
     depends_on:
       fpm:
         condition: service_started
+
   varnish:
     hostname: varnish.magento2.docker
-    image: 'magento/magento-cloud-docker-varnish:6.2-1.3.2'
+    image: "magento/magento-cloud-docker-varnish:6.2-1.3.2"
     networks:
       magento:
         aliases:
@@ -102,9 +128,10 @@ services:
     depends_on:
       web:
         condition: service_started
+
   tls:
     hostname: tls.magento2.docker
-    image: 'magento/magento-cloud-docker-nginx:1.19-1.3.2'
+    image: "magento/magento-cloud-docker-nginx:1.19-1.3.2"
     extends: generic
     networks:
       magento:
@@ -116,21 +143,22 @@ services:
       - UPSTREAM_HOST=varnish
       - UPSTREAM_PORT=80
     ports:
-      - '80:80'
-      - '443:443'
+      - "80:80"
+      - "443:443"
     depends_on:
       varnish:
         condition: service_started
+
   fpm_xdebug:
     hostname: fpm_xdebug.magento2.docker
-    image: 'magento/magento-cloud-docker-php:8.1-fpm-1.3.2'
+    image: "magento/magento-cloud-docker-php:8.1-fpm-1.3.2"
     extends: generic
     volumes:
-      - './magento2:/app:delegated'
-      - './.docker/xdebug.ini:/usr/local/etc/php/conf.d/zz-xdebug-settings.ini'
+      - "./magento2:/app:delegated"
+      - "./.docker/xdebug.ini:/usr/local/etc/php/conf.d/zz-xdebug-settings.ini"
     environment:
-      - 'PHP_EXTENSIONS=bcmath bz2 calendar exif gd gettext intl mysqli pcntl pdo_mysql soap sockets sysvmsg sysvsem sysvshm opcache zip xsl sodium xdebug'
-      - 'XDEBUG_CONFIG= idekey=PHPSTORM remote_host=172.17.0.1 remote_port=9002'
+      - "PHP_EXTENSIONS=bcmath bz2 calendar exif gd gettext intl mysqli pcntl pdo_mysql soap sockets sysvmsg sysvsem sysvshm opcache zip xsl sodium xdebug"
+      - "XDEBUG_CONFIG= idekey=PHPSTORM remote_host=172.17.0.1 remote_port=9002"
     networks:
       magento:
         aliases:
@@ -140,17 +168,17 @@ services:
         condition: service_started
   generic:
     hostname: generic.magento2.docker
-    image: 'magento/magento-cloud-docker-php:8.1-cli-1.3.2'
+    image: "magento/magento-cloud-docker-php:8.1-cli-1.3.2"
     env_file: ./.docker/config.env
     environment:
       - MAGENTO_RUN_MODE=developer
-      - 'PHP_EXTENSIONS=bcmath bz2 calendar exif gd gettext intl mysqli pcntl pdo_mysql soap sockets sysvmsg sysvsem sysvshm opcache zip xsl sodium'
+      - "PHP_EXTENSIONS=bcmath bz2 calendar exif gd gettext intl mysqli pcntl pdo_mysql soap sockets sysvmsg sysvsem sysvshm opcache zip xsl sodium"
   build:
     hostname: build.magento2.docker
-    image: 'magento/magento-cloud-docker-php:8.1-cli-1.3.2'
+    image: "magento/magento-cloud-docker-php:8.1-cli-1.3.2"
     extends: generic
     volumes:
-      - './magento2:/app:delegated'
+      - "./magento2:/app:delegated"
     networks:
       magento-build:
         aliases:
@@ -164,10 +192,10 @@ services:
         condition: service_healthy
   deploy:
     hostname: deploy.magento2.docker
-    image: 'magento/magento-cloud-docker-php:8.1-cli-1.3.2'
+    image: "magento/magento-cloud-docker-php:8.1-cli-1.3.2"
     extends: generic
     volumes:
-      - './magento2:/app:delegated'
+      - "./magento2:/app:delegated"
     networks:
       magento:
         aliases:
@@ -181,23 +209,23 @@ services:
         condition: service_healthy
   mailhog:
     hostname: mailhog.magento2.docker
-    image: 'mailhog/mailhog:latest'
+    image: "mailhog/mailhog:latest"
     ports:
-      - '1025:1025'
-      - '8025:8025'
+      - "1025:1025"
+      - "8025:8025"
     networks:
       magento:
         aliases:
           - mailhog.magento2.docker
   cron:
     hostname: cron.magento2.docker
-    image: 'magento/magento-cloud-docker-php:8.1-cli-1.3.2'
+    image: "magento/magento-cloud-docker-php:8.1-cli-1.3.2"
     extends: generic
     command: run-cron
     environment:
-      CRONTAB: '* * * * * root cd /app && /usr/local/bin/php bin/magento cron:run >> /app/var/log/cron.log'
+      CRONTAB: "* * * * * root cd /app && /usr/local/bin/php bin/magento cron:run >> /app/var/log/cron.log"
     volumes:
-      - './magento2:/app:delegated'
+      - "./magento2:/app:delegated"
     networks:
       magento:
         aliases:
@@ -210,7 +238,7 @@ services:
       elasticsearch:
         condition: service_healthy
 volumes:
-  magento2-magento-db: {  }
+  magento2-magento-db: {}
 networks:
   magento:
     driver: bridge
