--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,7 @@ services:
   redis:
     hostname: redis.magento2.docker
     image: "redis:5.0"
+    container_name: magento-redis
     volumes:
       - "./magento2:/app:delegated"
     ports:
@@ -74,6 +75,7 @@ services:
   elasticsearch:
     hostname: elasticsearch.magento2.docker
     image: "magento/magento-cloud-docker-elasticsearch:7.7-1.3.2"
+    container_name: magento-elasticsearch
     ulimits:
       memlock:
         soft: -1
@@ -89,6 +91,7 @@ services:
   fpm:
     hostname: fpm.magento2.docker
     image: "magento/magento-cloud-docker-php:8.1-fpm-1.3.2"
+    container_name: magento-fpm
     extends: generic
     volumes:
       - "./magento2:/app:delegated"
@@ -103,6 +106,7 @@ services:
   web:
     hostname: web.magento2.docker
     image: "magento/magento-cloud-docker-nginx:1.19-1.3.2"
+    container_name: magento-web
     extends: generic
     volumes:
       - "./magento2:/app:delegated"
@@ -121,6 +125,7 @@ services:
   varnish:
     hostname: varnish.magento2.docker
     image: "magento/magento-cloud-docker-varnish:6.2-1.3.2"
+    container_name: magento-varnish
     networks:
       magento:
         aliases:
@@ -132,6 +137,7 @@ services:
   tls:
     hostname: tls.magento2.docker
     image: "magento/magento-cloud-docker-nginx:1.19-1.3.2"
+    container_name: magento-tls
     extends: generic
     networks:
       magento:
@@ -152,6 +158,7 @@ services:
   fpm_xdebug:
     hostname: fpm_xdebug.magento2.docker
     image: "magento/magento-cloud-docker-php:8.1-fpm-1.3.2"
+    container_name: magento-fpm_xdebug
     extends: generic
     volumes:
       - "./magento2:/app:delegated"
@@ -169,6 +176,7 @@ services:
   generic:
     hostname: generic.magento2.docker
     image: "magento/magento-cloud-docker-php:8.1-cli-1.3.2"
+    container_name: magento-generic
     env_file: ./.docker/config.env
     environment:
       - MAGENTO_RUN_MODE=developer
@@ -176,6 +184,7 @@ services:
   build:
     hostname: build.magento2.docker
     image: "magento/magento-cloud-docker-php:8.1-cli-1.3.2"
+    container_name: magento-build
     extends: generic
     volumes:
       - "./magento2:/app:delegated"
@@ -193,6 +202,7 @@ services:
   deploy:
     hostname: deploy.magento2.docker
     image: "magento/magento-cloud-docker-php:8.1-cli-1.3.2"
+    container_name: magento-deploy
     extends: generic
     volumes:
       - "./magento2:/app:delegated"
@@ -210,6 +220,7 @@ services:
   mailhog:
     hostname: mailhog.magento2.docker
     image: "mailhog/mailhog:latest"
+    container_name: magento-mailhog
     ports:
       - "1025:1025"
       - "8025:8025"
@@ -220,6 +231,7 @@ services:
   cron:
     hostname: cron.magento2.docker
     image: "magento/magento-cloud-docker-php:8.1-cli-1.3.2"
+    container_name: magento-cron
     extends: generic
     command: run-cron
     environment:
