--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
-# ./vendor/bin/ece-docker 'build:compose' --mode=developer --sync-engine=native --expose-db-port=3306 --with-cron --set-docker-host --with-xdebug
+# ./vendor/bin/ece-docker 'build:compose' --mode=developer --php='8.1' --nginx='1.19' --expose-db-port=3306 --no-varnish
 version: "2.1"
 services:
   db:
     hostname: db.magento2.docker
     image: "mariadb:10.3"
-    container_name: magento-mysql
     shm_size: 2gb
     environment:
       - MYSQL_ROOT_PASSWORD=magento2
@@ -14,8 +13,9 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - "./magento2:/app:delegated"
-      - "magento2-magento-db:/var/lib/mysql"
+      - "./magento:/app:delegated"
+      - "./.docker:/.docker"
+      - "mymagento-magento-db:/var/lib/mysql"
     healthcheck:
       test: "mysqladmin ping -h localhost -pmagento2"
       interval: 30s
@@ -25,19 +25,16 @@ services:
       magento:
         aliases:
           - db.magento2.docker
-
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
-    container_name: phpmyadmin
     links:
       - db
     environment:
-      PMA_HOST: magento-mysql
+      PMA_HOST: db.magento2.docker
       PMA_USER: "root"
       PMA_PASSWORD: "magento2"
       PMA_PORT: 3306
       PMA_ARBITRARY: 1
-    restart: always
     ports:
       - 8081:80
     volumes:
@@ -46,13 +43,12 @@ services:
       magento:
         aliases:
           - db.magento2.docker
-
   redis:
     hostname: redis.magento2.docker
-    image: "redis:5.0"
-    container_name: magento-redis
+    image: "redis:7.0"
     volumes:
-      - "./magento2:/app:delegated"
+      - "./magento:/app:delegated"
+      - "./.docker:/.docker"
     ports:
       - 6379
     sysctls:
@@ -71,11 +67,9 @@ services:
       magento:
         aliases:
           - redis.magento2.docker
-
   elasticsearch:
     hostname: elasticsearch.magento2.docker
-    image: "magento/magento-cloud-docker-elasticsearch:7.7-1.3.2"
-    container_name: magento-elasticsearch
+    image: "magento/magento-cloud-docker-elasticsearch:7.10-1.3.2"
     ulimits:
       memlock:
         soft: -1
@@ -87,14 +81,13 @@ services:
       magento:
         aliases:
           - elasticsearch.magento2.docker
-
   fpm:
     hostname: fpm.magento2.docker
-    image: "magento/magento-cloud-docker-php:8.1-fpm-1.3.2"
-    container_name: magento-fpm
+    image: "magento/magento-cloud-docker-php:8.2-fpm-1.4.0"
     extends: generic
     volumes:
-      - "./magento2:/app:delegated"
+      - "./magento:/app:delegated"
+      - "./.docker:/.docker"
     networks:
       magento:
         aliases:
@@ -102,16 +95,15 @@ services:
     depends_on:
       db:
         condition: service_healthy
-
   web:
     hostname: web.magento2.docker
-    image: "magento/magento-cloud-docker-nginx:1.19-1.3.2"
-    container_name: magento-web
+    image: "magento/magento-cloud-docker-nginx:1.24-1.3.6"
     extends: generic
     volumes:
-      - "./magento2:/app:delegated"
+      - "./magento:/app:delegated"
+      - "./.docker:/.docker"
     environment:
-      - WITH_XDEBUG=1
+      - WITH_XDEBUG=0
       - NGINX_WORKER_PROCESSES=1
       - NGINX_WORKER_CONNECTIONS=1024
     networks:
@@ -121,23 +113,9 @@ services:
     depends_on:
       fpm:
         condition: service_started
-
-  varnish:
-    hostname: varnish.magento2.docker
-    image: "magento/magento-cloud-docker-varnish:6.2-1.3.2"
-    container_name: magento-varnish
-    networks:
-      magento:
-        aliases:
-          - varnish.magento2.docker
-    depends_on:
-      web:
-        condition: service_started
-
   tls:
     hostname: tls.magento2.docker
-    image: "magento/magento-cloud-docker-nginx:1.19-1.3.2"
-    container_name: magento-tls
+    image: "magento/magento-cloud-docker-nginx:1.24-1.3.6"
     extends: generic
     networks:
       magento:
@@ -146,66 +124,28 @@ services:
     environment:
       - NGINX_WORKER_PROCESSES=1
       - NGINX_WORKER_CONNECTIONS=1024
-      - UPSTREAM_HOST=varnish
-      - UPSTREAM_PORT=80
+      - UPSTREAM_HOST=web
+      - UPSTREAM_PORT=8080
     ports:
       - "80:80"
       - "443:443"
     depends_on:
-      varnish:
-        condition: service_started
-
-  fpm_xdebug:
-    hostname: fpm_xdebug.magento2.docker
-    image: "magento/magento-cloud-docker-php:8.1-fpm-1.3.2"
-    container_name: magento-fpm_xdebug
-    extends: generic
-    volumes:
-      - "./magento2:/app:delegated"
-      - "./.docker/xdebug.ini:/usr/local/etc/php/conf.d/zz-xdebug-settings.ini"
-    environment:
-      - "PHP_EXTENSIONS=bcmath bz2 calendar exif gd gettext intl mysqli pcntl pdo_mysql soap sockets sysvmsg sysvsem sysvshm opcache zip xsl sodium xdebug"
-      - "XDEBUG_CONFIG= idekey=PHPSTORM remote_host=172.17.0.1 remote_port=9002"
-    networks:
-      magento:
-        aliases:
-          - fpm_xdebug.magento2.docker
-    depends_on:
-      db:
+      web:
         condition: service_started
   generic:
     hostname: generic.magento2.docker
-    image: "magento/magento-cloud-docker-php:8.1-cli-1.3.2"
-    container_name: magento-generic
+    image: "magento/magento-cloud-docker-php:8.2-cli-1.4.0"
     env_file: ./.docker/config.env
     environment:
       - MAGENTO_RUN_MODE=developer
       - "PHP_EXTENSIONS=bcmath bz2 calendar exif gd gettext intl mysqli pcntl pdo_mysql soap sockets sysvmsg sysvsem sysvshm opcache zip xsl sodium"
-  build:
-    hostname: build.magento2.docker
-    image: "magento/magento-cloud-docker-php:8.1-cli-1.3.2"
-    container_name: magento-build
-    extends: generic
-    volumes:
-      - "./magento2:/app:delegated"
-    networks:
-      magento-build:
-        aliases:
-          - build.magento2.docker
-    depends_on:
-      db:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-      elasticsearch:
-        condition: service_healthy
   deploy:
     hostname: deploy.magento2.docker
-    image: "magento/magento-cloud-docker-php:8.1-cli-1.3.2"
-    container_name: magento-deploy
+    image: "magento/magento-cloud-docker-php:8.2-cli-1.4.0"
     extends: generic
     volumes:
-      - "./magento2:/app:delegated"
+      - "./magento:/app:delegated"
+      - "./.docker:/.docker"
     networks:
       magento:
         aliases:
@@ -220,7 +160,6 @@ services:
   mailhog:
     hostname: mailhog.magento2.docker
     image: "mailhog/mailhog:latest"
-    container_name: magento-mailhog
     ports:
       - "1025:1025"
       - "8025:8025"
@@ -230,14 +169,14 @@ services:
           - mailhog.magento2.docker
   cron:
     hostname: cron.magento2.docker
-    image: "magento/magento-cloud-docker-php:8.1-cli-1.3.2"
-    container_name: magento-cron
+    image: "magento/magento-cloud-docker-php:8.2-cli-1.4.0"
     extends: generic
     command: run-cron
     environment:
       CRONTAB: "* * * * * root cd /app && /usr/local/bin/php bin/magento cron:run >> /app/var/log/cron.log"
     volumes:
-      - "./magento2:/app:delegated"
+      - "./magento:/app:delegated"
+      - "./.docker:/.docker"
     networks:
       magento:
         aliases:
@@ -245,14 +184,26 @@ services:
     depends_on:
       db:
         condition: service_healthy
-      redis:
-        condition: service_healthy
-      elasticsearch:
-        condition: service_healthy
+  fpm_xdebug:
+    hostname: fpm_xdebug.magento2.docker
+    image: "magento/magento-cloud-docker-php:8.2-fpm-1.4.0"
+    extends: generic
+    volumes:
+      - "./magento:/app:delegated"
+      - "./.docker:/.docker"
+      - "./.docker/xdebug.ini:/usr/local/etc/php/conf.d/zz-xdebug-settings.ini"
+    environment:
+      - "PHP_EXTENSIONS=bcmath bz2 calendar exif gd gettext intl mysqli pcntl pdo_mysql soap sockets sysvmsg sysvsem sysvshm opcache zip xsl sodium xdebug"
+      - "XDEBUG_CONFIG= idekey=PHPSTORM remote_host=172.17.0.1 remote_port=9002"
+    networks:
+      magento:
+        aliases:
+          - fpm_xdebug.magento2.docker
+    depends_on:
+      db:
+        condition: service_started
 volumes:
-  magento2-magento-db: {}
+  mymagento-magento-db: {}
 networks:
   magento:
-    driver: bridge
-  magento-build:
     driver: bridge
